[tool.poetry]
name = "mantato"
version = "0.1.0"
description = "A metadata flow manager for receiving and propagating song metadata based on rabbitmq"
authors = ["George Galanakis <ggalan87@gmail.com>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.scripts]
metadata-propagator = "mantato.metadata_propagator:main"
rds-client = "mantato.consumers.rds_client:main"
icestreamer-client = "mantato.consumers.icestreamer_client:main"
scheduler-proxy = "mantato.providers.scheduler_proxy:main"
producer-status-provider = "mantato.providers.producer_status_provider:main"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pika = "^1.3.2"
mutagen = "^1.46.0"
retry = "^0.9.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
